5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1764_1583.log
== TEST (2019-05-30 11:47:12) 
-- CODE:
from numpy import*
n = array(input("caracteres numericos: "))
n1 = "." + n[::-4]
print(n1)	
#num = input("num")
#i = 0 
#j = 3
#p = "."
#tri = ""
#while(i < len(num)):
#	if(i < (len(num)-4)):
#		tri = tri + num[i:j] + p
#	else:
#		tri = tri + num[i:j]
#	i = i + 3
#	j = j + 3
#print(tri)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:49:09) 
-- CODE:
from numpy import*
n = input("caracteres numericos: ")
n1 = "." + n[::-4]
print(n1)	
#num = input("num")
#i = 0 
#j = 3
#p = "."
#tri = ""
#while(i < len(num)):
#	if(i < (len(num)-4)):
#		tri = tri + num[i:j] + p
#	else:
#		tri = tri + num[i:j]
#	i = i + 3
#	j = j + 3
#print(tri)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:49:30) 
-- CODE:
from numpy import*
n = input("caracteres numericos: ")
n1 = "." + n[::4]
print(n1)	
#num = input("num")
#i = 0 
#j = 3
#p = "."
#tri = ""
#while(i < len(num)):
#	if(i < (len(num)-4)):
#		tri = tri + num[i:j] + p
#	else:
#		tri = tri + num[i:j]
#	i = i + 3
#	j = j + 3
#print(tri)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:49:43) 
-- CODE:
from numpy import*
n = input("caracteres numericos: ")
n1 = "." + n[:4]
print(n1)	
#num = input("num")
#i = 0 
#j = 3
#p = "."
#tri = ""
#while(i < len(num)):
#	if(i < (len(num)-4)):
#		tri = tri + num[i:j] + p
#	else:
#		tri = tri + num[i:j]
#	i = i + 3
#	j = j + 3
#print(tri)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:49:49) 
-- CODE:
from numpy import*
n = input("caracteres numericos: ")
n1 = "." + n[:4]
print(n1)	
#num = input("num")
#i = 0 
#j = 3
#p = "."
#tri = ""
#while(i < len(num)):
#	if(i < (len(num)-4)):
#		tri = tri + num[i:j] + p
#	else:
#		tri = tri + num[i:j]
#	i = i + 3
#	j = j + 3
#print(tri)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:50:29) 
-- CODE:
from numpy import*
n = input("caracteres numericos: ")
n1 = "." + n[4:]
print(n1)	
#num = input("num")
#i = 0 
#j = 3
#p = "."
#tri = ""
#while(i < len(num)):
#	if(i < (len(num)-4)):
#		tri = tri + num[i:j] + p
#	else:
#		tri = tri + num[i:j]
#	i = i + 3
#	j = j + 3
#print(tri)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:50:58) 
-- CODE:
from numpy import*
n = input("caracteres numericos: ")
n1 = "." + size(n[4:])
print(n1)	
#num = input("num")
#i = 0 
#j = 3
#p = "."
#tri = ""
#while(i < len(num)):
#	if(i < (len(num)-4)):
#		tri = tri + num[i:j] + p
#	else:
#		tri = tri + num[i:j]
#	i = i + 3
#	j = j + 3
#print(tri)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:29) 
-- CODE:
from numpy import*
n = input("caracteres numericos: ")
n1 = "." + size(n[4:]), type=int
print(n1)	
#num = input("num")
#i = 0 
#j = 3
#p = "."
#tri = ""
#while(i < len(num)):
#	if(i < (len(num)-4)):
#		tri = tri + num[i:j] + p
#	else:
#		tri = tri + num[i:j]
#	i = i + 3
#	j = j + 3
#print(tri)
-- ERROR:
File "XXXX", line 3
    n1 = "." + size(n[4:]), type=int
        ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:55:13) 
-- CODE:
from numpy import*
n = input("caracteres numericos: ")
n1 = "." + size(n[4:]), type=int
print(n1)	
#num = input("num")
#i = 0 
#j = 3
#p = "."
#tri = ""
#while(i < len(num)):
#	if(i < (len(num)-4)):
#		tri = tri + num[i:j] + p
#	else:
#		tri = tri + num[i:j]
#	i = i + 3
#	j = j + 3
#print(tri)
-- ERROR:
File "XXXX", line 3
    n1 = "." + size(n[4:]), type=int
        ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:55:21) 
-- CODE:
from numpy import*
n = input("caracteres numericos: ")
n1 = "." + size(n[4:]), type=int
print(n1)	
#num = input("num")
#i = 0 
#j = 3
#p = "."
#tri = ""
#while(i < len(num)):
#	if(i < (len(num)-4)):
#		tri = tri + num[i:j] + p
#	else:
#		tri = tri + num[i:j]
#	i = i + 3
#	j = j + 3
#print(tri)
-- ERROR:
File "XXXX", line 3
    n1 = "." + size(n[4:]), type=int
        ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:20:41) 
-- CODE:
from numpy import*
n = input("caracteres numericos: ")
i = 0 
j = 3
p = "."
tri = ""
while(i < len(n)):
	if(i < (len(n)-4)):
		tri = tri + n[i:j] + p
	else:
		tri = tri + n[i:j]
	i = i + 3
	j = j + 3
print(tri)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:20:51) 
-- CODE:
from numpy import*
n = input("caracteres numericos: ")
i = 0 
j = 3
p = "."
tri = ""
while(i < len(n)):
	if(i < (len(n)-4)):
		tri = tri + n[i:j] + p
	else:
		tri = tri + n[i:j]
	i = i + 3
	j = j + 3
print(tri)
-- EXECUTION TIME:
0.611836
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
